squished some bugs

--- a/cs/main.css
+++ b/cs/main.css
@@ -13,73 +13,8 @@ body {
 	text-align: justify;
 }
 
-.contactIcons {
-	width: 30%;
-}
-
-#top {
-	position: absolute;
-	margin: auto;
-	top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-	z-index: auto;
-}
-
-#name1, #name2 {
-	color: red;
-	mix-blend-mode: difference;
-	font-size: 8vw;
-	transform: skew(-15deg);
-}
-
-#mainDiv {
-	background: black;
-}
-
-#logo {
-	color: #FFFFFF;
-	font-weight: 900;
-	font-size: 32px;
-}
-
 nav {
 	line-height: 10px;
-}
-
-.sectionBacks {
-	background-color: #191919;
-}
-
-#apps {
-	background: black;
-}
-
-#photography {
-	background-color: #000000;
-}
-
-.overlayDIV {
-	position: absolute;
-  text-align: center;
-	overflow: hidden;
-	color: #FFFFFF;
-	height: 100%;
-  width: 100%;
-	top: 35%;
-	pointer-events: none; /*This prevents the text from interrupting the hover event on the image below*/
-}
-.actualImage {
-	width: 60%;
-}
-
-.actualImage:hover {
-	filter: brightness(20%);
-	transition: all 0.2s ease-in-out 0s;
-}
-
-.myPhotos {
-	width: 80%;
 }
 
 .bgColorNav {
@@ -90,14 +25,84 @@ nav {
 	color: #FF0000;
 }
 
+#top {
+	position: absolute;
+	margin: auto;
+	top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#name1, #name2 {
+	color: red;
+	mix-blend-mode: difference;
+	font-size: 8vw;
+	transform: skew(-15deg);
+}
+
+#mainDiv {
+	background: #000000;
+}
+
+#logo {
+	color: #FFFFFF;
+	font-weight: 900;
+	font-size: 32px;
+}
+
+.sectionBacks {
+	background-color: #191919;
+}
+
+/*Web Dev Experience Section*/
+
+.overlayDIV {
+	position: absolute;
+	overflow: hidden;
+	color: #FFFFFF;
+	height: 100%;
+  width: 70%;
+	top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+	pointer-events: none; /*This prevents the text from interrupting the hover event on the image below*/
+}
+
+.actualImage {
+	width: 70%;
+}
+
+.actualImage:hover {
+	filter: brightness(20%);
+	transition: all 0.2s ease-in-out 0s;
+}
+
+/*Web Dev Projects Section*/
+
+#apps {
+	background: #000000;
+}
+
+/*Photography Section*/
+
+#photography {
+	background-color: #000000;
+}
+
+.myPhotos {
+	width: 75%;
+}
+
+/*Font Awesome Icons*/
+
 .fa-quote-left {
 	font-size: 6vw;
-	color: white;
+	color: #FFFFFF;
 }
 
 .fa-sun, .fa-wikipedia-w, .fa-twitch, .fa-calculator, .fa-clock, .fa-github, .fa-linkedin-in, .fa-file-pdf {
 	font-size: 8vw;
-	color: white;
+	color: #FFFFFF;
 }
 
 .fa-quote-left :hover {
@@ -143,7 +148,7 @@ nav {
 /*Weather App CSS*/
 
 .weatherBackground {
-	background-color: aquamarine;
+	background-color: #D1F7FF;
 }
 
 /*Wiki App CSS*/
